tests/files/parser_tests/should_fail/045.cmdr
//Should fail due to incorrect timeout command
timeout echo "hello" 4000;